# fleet

./: .env.example  .gitignore  FEATURES.md  Makefile  README.md  pyproject.toml
examples/: smoke_ddp.py  smoke_env.py  train_toy.py
fleet/: __init__.py  __main__.py  cli.py  config.py  dist.py  executor.py  pool.py  rendezvous.py  schema.py  session.py  worker.py
tests/: conftest.py  run_failures.py  run_sim.py  test_config.py  test_session.py  test_sim_e2e.py  test_squeue.py
